--- a/css/style.css
+++ b/css/style.css
@@ -37,24 +37,21 @@ h3 {
     font-weight: 300;
 }
 
-.left {
+.meio {
     position: relative;
     width: 50%;
     transform: translateY(-50%);
     top: 50%;
     left: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
-
-.right {
-    position: relative;
+.meio .flex {
     width: 50%;
-    transform: translateY(-50%);
-    top: 50%;
-    right: 0;
 }
 
-.right img {
+.meio img {
     height: 192px;
     width: 370px;
 }
